# freeform_handler

./: .gitignore  COPYRIGHT  ChangeLog  DODS_Date.cc  DODS_Date.h  DODS_Date_Factory.cc  DODS_Date_Factory.h  DODS_Date_Time.cc  DODS_Date_Time.h  DODS_Date_Time_Factory.cc  DODS_Date_Time_Factory.h  DODS_Decimal_Year.cc  DODS_Decimal_Year.h  DODS_Decimal_Year_Factory.cc  DODS_Decimal_Year_Factory.h  DODS_EndDate_Factory.cc  DODS_EndDate_Factory.h  DODS_EndDate_Time_Factory.cc  DODS_EndDate_Time_Factory.h  DODS_EndDecimal_Year_Factory.cc  DODS_EndDecimal_Year_Factory.h  DODS_EndTime_Factory.cc  DODS_EndTime_Factory.h  DODS_StartDate_Factory.cc  DODS_StartDate_Factory.h  DODS_StartDate_Time_Factory.cc  DODS_StartDate_Time_Factory.h  DODS_StartDecimal_Year_Factory.cc  DODS_StartDecimal_Year_Factory.h  DODS_StartTime_Factory.cc  DODS_StartTime_Factory.h  DODS_Time.cc  DODS_Time.h  DODS_Time_Factory.cc  DODS_Time_Factory.h  FFArray.cc  FFArray.h  FFByte.cc  FFByte.h  FFD4Sequence.cc  (+63 more)
3.7.4/: DODS_Date.cc  DODS_Date.h  DODS_Date_Factory.h  DODS_EndDate_Factory.cc  DODS_EndDate_Factory.h  DODS_EndDate_Time_Factory.cc  DODS_EndDate_Time_Factory.h  DODS_EndDecimal_Year_Factory.h  DODS_StartDate_Factory.cc  DODS_StartDate_Time_Factory.h  DODS_StartDecimal_Year_Factory.cc  DODS_StartDecimal_Year_Factory.h  DODS_Time.cc  DODS_Time.h  DODS_Time_Factory.h  FFArray.h  FFFloat32.cc  FFFloat64.cc  FFFloat64.h  FFGrid.cc  FFInt16.cc  FFInt16.h  FFInt32.cc  FFModule.h  FFRequestHandler.cc  FFRequestHandler.h  FFStr.h  FFTypeFactory.h  FFUInt16.h  FFUInt32.cc  FFUInt32.h  Makefile.am  README  ff_ce_functions.cc  ff_ce_functions.h  ffdds.cc  opendap.ini
3.7.4/FFND/: Makefile.am  makeform.c  menuindx.c  menuobj.c  name_tab.c  readfile.c
3.7.4/ff-test/: dbl_data.bin.data  dbl_data3.bin.data  t3.dat.data  test1.dat.data
3.7.4/ff-test/dap_ff_handler/: data.1.exp  date_time.1.exp  dds.1.exp
3.7.4/win32/: Makefile
FFND/: Makefile.am  Makefile.in  afm2bfm.c  avl.h  avlfree.c  avlins.c  avltree.h  bufform.c  checkvar.c  chkform.c  cv_units.c  dbevents.c  dependencies  dl_lists.c  dl_lists.h  eqn_util.c  err.h  error.c  eval_eqn.c  eval_eqn.h  ff2psdts.h  ff_types.h  ff_utils.c  file2buf.c  formlist.c  freeform.c  freeform.h  makedbin.c  makeform.c  maxmin.h  memtrack.c  memtrack.h  menuindx.c  menuindx.h  menuobj.c  mm_make.c  name_tab.c  name_tab.h  ndarray.c  ndarray.h  (+7 more)
FFND/testsuite/: datef  test_newform
FFND/testsuite/tutor/: latlon2.bin.pc
FFND/win32/: Makefile
OSX_Resources/: Info.plist  Info.plist.proto  InstallationCheck  InstallationCheck.strings  ReadMe.txt  Welcome.html  update_mac_package_contents.pl
bes-testsuite/: Makefile.am  bes.conf.in  bes.conf.modules.in  freeform_handlerTest.at
bes-testsuite/besstandalone.ff/: avhrr.dat.0.exp  avhrr.dat.1.exp  avhrr.dat.2.exp  avhrr.dat.3.exp
bes-testsuite/ff/: avhrr.dat.0.bescmd  avhrr.dat.1.bescmd  avhrr.dat.2.bescmd  avhrr.dat.3.bescmd  dbl_data.bin.ddx.bescmd.baseline  dbl_data3.bin.ddx.bescmd.baseline  jplpath.dat.ddx.bescmd.baseline  t3.dat.ddx.bescmd.baseline  test0.dat.ddx.bescmd.baseline  test1.dat.ddx.bescmd.baseline  test4.dat.ddx.bescmd.baseline  test4.dat.dmr.bescmd.baseline  test5.dab.ddx.bescmd.baseline  test6.dab.ddx.bescmd.baseline  test7.dat.ddx.bescmd.baseline  test8.dat.ddx.bescmd.baseline  test9.dat.ddx.bescmd.baseline  test9.dat.dmr.bescmd.baseline
data/: gsodock.fmt
ff-test/: README  avhrr.data  avhrr_das.txt  avhrr_date_ce7.err  avhrr_date_ce8.err  avhrr_date_time_err1.txt  avhrr_dds.txt  build-avhrr-cat.pl  dbl_data.bin.dds.txt  dbl_data2.bin.data  dbl_data3.bin.dds.txt  int_data.bin.data  int_data2.bin.data  int_data3.bin.data  jplpath.fmt  jplpath_das.txt  jplpath_dds.txt  jplpath_space.fmt  seq0.fmt  seq1.fmt  seq2.fmt  seq3.fmt  t3.das  t3.dat.data  t3_das.txt  t3_dds.txt  test-files.tcl  test0.dat.data  test0.fmt  test0_das.txt  test0_dds.txt  test1.dat.data  test1.fmt  test11.fmt  test1_das.txt  test1_dds.txt  test4.dat.data  test4.fmt  test4_das.txt  test4_dds.txt  (+20 more)
ff-test/config/: unix.exp
ff-test/dap_ff_handler/: das.1.exp  date.1.exp
ff-test/ff_handler/: das.1.exp  data.1.exp  date.1.exp  date_time.1.exp  date_time.2.exp  dds.1.exp  time.1.exp
win32/: config_ff.h
